--- a/AlbergueAnimal/Views/Adocao/Index.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Index.cshtml
@@ -23,7 +23,7 @@ else
     <thead>
         <tr>
             <th>
-               Foto
+                Foto
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CreationDate)
@@ -35,8 +35,8 @@ else
                 @Html.DisplayNameFor(model => model.EndDate)
             </th>
             @*<th>
-            @Html.DisplayNameFor(model => model.Arquivado)
-        </th>*@
+                    @Html.DisplayNameFor(model => model.Arquivado)
+                </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.Animal)
             </th>
@@ -52,50 +52,50 @@ else
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
-            <td>
-                @{
-                    if (item.Animal.imageContent != null && item.Animal.imageMimeType.Contains("image"))
-                    {
-                        string imageBase64 = Convert.ToBase64String(item.Animal.imageContent);
-                        string imageSrc = string.Format("data:" + item.Animal.imageMimeType + ";base64,{0}", imageBase64);
-                        <img src="@imageSrc" alt="Profile picture of @item.Animal.Nome" style=" width: 50px;height: 50px; border-radius: 50%; padding: 0;width: 50px;height: 50px; line-height: 50px;" class="img-responsive img-rounded" />
-                    }
-                }
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreationDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastUpdated)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndDate)
-            </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Arquivado)
-            </td>*@
-            <td>
-                @Html.DisplayFor(modelItem => item.Animal.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Utilizador.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EstadoAdocao.estado)
-            </td>
-
-            @if (User.IsInRole("Administrator"))
-            {
+            <tr>
                 <td>
-                    <a>@Html.ActionLink("Imprimir", "PrintAdoptionSlip", new { id = item.AdocaoId })</a> |
-                    <a asp-action="Edit" asp-route-id="@item.AdocaoId">Editar</a> |
-                    <a asp-action="Details" asp-route-id="@item.AdocaoId">Detalhes</a> |
-                    <a asp-action="Delete" asp-route-id="@item.AdocaoId">Arquivar</a>
+                    @{
+                        if (item.Animal.imageContent != null && item.Animal.imageMimeType.Contains("image"))
+                        {
+                            string imageBase64 = Convert.ToBase64String(item.Animal.imageContent);
+                            string imageSrc = string.Format("data:" + item.Animal.imageMimeType + ";base64,{0}", imageBase64);
+                            <img src="@imageSrc" alt="Profile picture of @item.Animal.Nome" style=" width: 50px;height: 50px; border-radius: 50%; padding: 0;width: 50px;height: 50px; line-height: 50px;" class="img-responsive img-rounded" />
+                        }
+                    }
                 </td>
-            }
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreationDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastUpdated)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EndDate)
+                </td>
+                @*<td>
+                        @Html.DisplayFor(modelItem => item.Arquivado)
+                    </td>*@
+                <td>
+                    @Html.DisplayFor(modelItem => item.Animal.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Utilizador.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EstadoAdocao.estado)
+                </td>
 
-        </tr>
+                @if (User.IsInRole("Administrator"))
+                {
+                    <td>
+                        <a>@Html.ActionLink("Imprimir", "PrintAdoptionSlip", new { id = item.AdocaoId })</a> |
+                        <a asp-action="Edit" asp-route-id="@item.AdocaoId">Editar</a> |
+                        <a asp-action="Details" asp-route-id="@item.AdocaoId">Detalhes</a> |
+                        <a asp-action="Delete" asp-route-id="@item.AdocaoId">Arquivar</a>
+                    </td>
+                }
+
+            </tr>
         }
     </tbody>
 </table>
@@ -109,4 +109,55 @@ else
         <button type="submit" class="btn btn-default">Procurar</button>
     </p>
 }
+
+
+@if (User.IsInRole("Administrator") || User.IsInRole("Gestor Adoções"))
+{
+    <!-- HTML -->
+    <div id="chartdiv"></div>
+}
+
+@section Scripts{
+
+
+
+    <script src="~/amcharts4/core.js"></script>
+    <script src="~/amcharts4/charts.js"></script>
+    <script src="~/amcharts4/themes/animated.js"></script>
+    <link href="~/amcharts4/examples/javascript/donut-chart/index.css" rel="stylesheet" />
+    <script>
+        am4core.useTheme(am4themes_animated);
+
+        var chart = am4core.create("chartdiv", am4charts.PieChart);
+
+
+        chart.data = [{
+            "country": "Pendente",
+            "value":  @Model.Where(a => a.EstadoAdocao.estado.Equals("Pendente")).Where(z => z.Arquivado == false).ToList().LongCount()
+        }, {
+                "country": "Em Processamento",
+            "value":  @Model.Where(a => a.EstadoAdocao.estado.Equals("EmProcessamento")).Where(z => z.Arquivado == false).ToList().LongCount()
+        }];
+
+        chart.innerRadius = am4core.percent(50);
+
+        var series = chart.series.push(new am4charts.PieSeries());
+        series.dataFields.value = "value";
+        series.dataFields.category = "country";
+
+        series.slices.template.cornerRadius = 10;
+        series.slices.template.innerCornerRadius = 7;
+
+        // this creates initial animation
+        series.hiddenState.properties.opacity = 1;
+        series.hiddenState.properties.endAngle = -90;
+        series.hiddenState.properties.startAngle = -90;
+
+        chart.legend = new am4charts.Legend();
+    </script>
+
+
+
+}
+
 
