--- a/AlbergueAnimal/Views/Shared/_Layout.cshtml
+++ b/AlbergueAnimal/Views/Shared/_Layout.cshtml
@@ -25,19 +25,19 @@
     <script src="~/amcharts4/core.js"></script>
     <script src="~/amcharts4/themes/animated.js"></script>
 
-    <environment include="Development">
+    @*<environment include="Development">*@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-flatly.css" />
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-flatly.min.css" />
         <link rel="stylesheet" href="~/css/site.css" />
         <link rel="stylesheet" href="~/css/estilos.css" />
-    </environment>
-    <environment exclude="Development">
+  @*</environment>*@
+    @*<environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         <link rel="stylesheet" href="~/css/estilos.css" />
-    </environment>
+    </environment>*@
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
