--- a/AlbergueAnimal/Areas/Identity/Pages/Account/Register.cshtml
+++ b/AlbergueAnimal/Areas/Identity/Pages/Account/Register.cshtml
@@ -10,15 +10,15 @@
     <link rel="stylesheet" href="~/css/estilos.css" />
 </head>
 
-<img id="ajuda" class='glyphicon glyphicon-question-sign btn-icon' data-toggle='modal' data-target='#helpModal' title="Clique para obter ajuda" src="~/images/ajudaIcon.png" height="30" width="40" />
+<img id="ajuda" class=' glyphicon glyphicon-question-sign btn-icon' data-toggle='modal' data-target='#helpModal' title="Clique para obter ajuda" src="~/images/Infobox_info_icon.svg.png" height="30" width="40" />
 
 <div class="modal fade" id="helpModal" role="dialog">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
-            <div class="modal-header" style="background-color:#FFE4C4">
+            <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">
-                    <img class="glyphicon glyphicon-question-sign" src="~/images/ajudaIcon.png" height="20" width="40" />
+                    @*<img class="glyphicon glyphicon-question-sign" src="~/images/info.png" height="30" width="40" />*@
                     Página de Registo
                 </h4>
             </div>
