--- a/AlbergueAnimal/Views/Animals/Create.cshtml
+++ b/AlbergueAnimal/Views/Animals/Create.cshtml
@@ -4,6 +4,16 @@
     ViewData["Title"] = "Criar Animal";
 }
 
+<p>
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+        <li class="breadcrumb-item"><a asp-area="" asp-controller="Animals" asp-action="Index">Home</a></li>
+
+        <li class="breadcrumb-item active">@ViewData["Title"]</li>
+    </ol>
+</p>
+
+
 <h2>Criar Animal</h2>
 
 <h4>Animal</h4>
@@ -57,9 +67,15 @@
                 <input asp-for="DataVacina" class="form-control" />
                 <span asp-validation-for="DataVacina" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label class="control-label">Fotografia</label>
-                <input type="file" class="form-control" name="ThePicture" />
+            @*<div class="form-group">
+                    <label class="control-label">Fotografia</label>
+                    <input type="file" class="form-control" name="ThePicture" />
+                </div>*@
+            <div class="file form-control-file input-file-container">
+                <input type="file" name="ThePicture" id="file" />
+                <label for="file">Fotografia</label>
+
+
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -82,3 +98,37 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+
+<style>
+
+
+
+    .file {
+        position: relative;
+    }
+
+        .file label {
+            background: #39D2B4;
+            padding: 5px 20px;
+            color: #fff;
+            font-weight: bold;
+            font-size: .9em;
+            transition: all .4s;
+        }
+
+        .file input {
+            position: absolute;
+            display: inline-block;
+            left: 0;
+            top: 0;
+            opacity: 0.01;
+            cursor: pointer;
+        }
+
+            .file input:hover + label,
+            .file input:focus + label {
+                background: #34495E;
+                color: #39D2B4;
+            }
+</style>
