--- a/AlbergueAnimal/Views/Stock/Create.cshtml
+++ b/AlbergueAnimal/Views/Stock/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create"  method="post" enctype="multipart/form-data">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ProductTypeID" class="control-label"></label>
@@ -41,9 +41,15 @@
                 <input asp-for="QuantidadeLimite" class="form-control" />
                 <span asp-validation-for="QuantidadeLimite" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label class="control-label">Fotografia Producto</label>
-                <input type="file" class="form-control" name="ThePicture" />
+            @*<div class="form-group">
+                    <label class="control-label">Fotografia Producto</label>
+                    <input type="file" class="form-control" name="ThePicture" />
+                </div>*@
+            <div class="file form-control-file input-file-container">
+                <input type="file" name="ThePicture" id="file" />
+                <label for="file">Fotografia</label>
+
+
             </div>
             <div class="form-group">
                 <input type="submit" value="Confirmar" class="btn btn-default" />
@@ -56,3 +62,35 @@
     <a asp-action="Index">Voltar à Lista</a>
 </div>
 
+<style>
+
+
+
+    .file {
+        position: relative;
+    }
+
+        .file label {
+            background: #39D2B4;
+            padding: 5px 20px;
+            color: #fff;
+            font-weight: bold;
+            font-size: .9em;
+            transition: all .4s;
+        }
+
+        .file input {
+            position: absolute;
+            display: inline-block;
+            left: 0;
+            top: 0;
+            opacity: 0.01;
+            cursor: pointer;
+        }
+
+            .file input:hover + label,
+            .file input:focus + label {
+                background: #34495E;
+                color: #39D2B4;
+            }
+</style>
