--- a/AlbergueAnimal/Views/Stock/Edit.cshtml
+++ b/AlbergueAnimal/Views/Stock/Edit.cshtml
@@ -44,9 +44,11 @@
                 <span asp-validation-for="QuantidadeLimite" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label class="control-label">Fotografia</label>
-                <input type="file" class="form-control" name="ThePicture" />
+            <div class="file form-control-file input-file-container">
+                <input type="file" name="ThePicture" id="file" />
+                <label for="file">Fotografia</label>
+
+
             </div>
 
             <div class="form-group">
@@ -60,3 +62,37 @@
     <a asp-action="Index">Voltar à Lista</a>
 </div>
 
+
+
+<style>
+
+
+
+    .file {
+        position: relative;
+    }
+
+        .file label {
+            background: #39D2B4;
+            padding: 5px 20px;
+            color: #fff;
+            font-weight: bold;
+            font-size: .9em;
+            transition: all .4s;
+        }
+
+        .file input {
+            position: absolute;
+            display: inline-block;
+            left: 0;
+            top: 0;
+            opacity: 0.01;
+            cursor: pointer;
+        }
+
+            .file input:hover + label,
+            .file input:focus + label {
+                background: #34495E;
+                color: #39D2B4;
+            }
+</style>
