--- a/AlbergueAnimal/wwwroot/amcharts4/examples/javascript/donut-chart/index.css
+++ b/AlbergueAnimal/wwwroot/amcharts4/examples/javascript/donut-chart/index.css
@@ -1,12 +1,15 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  background-color: #ffffff;
-  overflow: hidden;
-  margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    background-color: #ffffff;
+    /*overflow: hidden;*/
+    margin: 0;
+    position: relative;
 }
 
 #chartdiv {
-    width: 50%;
-    max-height: 100px;
-    height: 25vh;
+    width: 75%;
+    max-height: 400px;
+    height: 75vh;
+    position:relative;
+    /*overflow: hidden;*/
 }
