--- a/AlbergueAnimal/Views/Adocao/Index.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model IEnumerable<AlbergueAnimal.Models.Adocao>
 
+
+
+
 @{
     ViewData["Title"] = "Adoção";
 }
@@ -18,7 +21,7 @@
 @if (User.IsInRole("Administrator"))
 {
     <p>
-        <a asp-action="Create">Registar Adoção</a> | <a asp-action="IndexArquivo">Arquivo</a>
+        <a asp-action="Create">Registar Adoção</a> | <a asp-action="IndexEmProcessamento">Em Processamento</a> | <a asp-action="IndexArquivo">Arquivo</a>
     </p>
 
 
@@ -100,7 +103,7 @@ else
                         <a>@Html.ActionLink("Imprimir", "PrintAdoptionSlip", new { id = item.AdocaoId })</a> |
                         <a asp-action="Edit" asp-route-id="@item.AdocaoId">Editar</a> |
                         <a asp-action="Details" asp-route-id="@item.AdocaoId">Detalhes</a> |
-                        <a asp-action="Delete" asp-route-id="@item.AdocaoId">Arquivar</a>
+                        <a asp-action="Arquivar" asp-route-id="@item.AdocaoId">Arquivar</a>
                     </td>
                 }
 
@@ -140,7 +143,7 @@ else
             "value":  @Model.Where(a => a.EstadoAdocao.estado.Equals("Pendente")).Where(z => z.Arquivado == false).ToList().LongCount()
         }, {
                 "country": "Em Processamento",
-            "value":  @Model.Where(a => a.EstadoAdocao.estado.Equals("EmProcessamento")).Where(z => z.Arquivado == false).ToList().LongCount()
+            "value":Ado @*@Model.Where(a => a.EstadoAdocao.estado.Equals("EmProcessamento")).Where(z => z.Arquivado == false).ToList().LongCount()*@
         }];
 
         chart.innerRadius = am4core.percent(50);
