--- a/AlbergueAnimal/Views/Animals/Create.cshtml
+++ b/AlbergueAnimal/Views/Animals/Create.cshtml
@@ -36,8 +36,8 @@
                 <input asp-for="Genero" class="form-control" />
                 <span asp-validation-for="Genero" class="text-danger"></span>-->
                 <label asp-for="Genero"></label><br />
-                <input type="radio" asp-for="Genero" value="Macho" checked>Macho<br>
-                <input type="radio" asp-for="Genero" value="Fêmea">Fêmea<br>
+                <input type="radio" asp-for="Genero" value="Macho" checked> Macho<br>
+                <input type="radio" asp-for="Genero" value="Fêmea"> Fêmea<br>
             </div>
             <div class="form-group">
                 <label asp-for="Cor" class="control-label"></label><br />
@@ -78,7 +78,7 @@
 
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Criar" class="btn btn-default" />
             </div>
         </form>
     </div>
