--- a/AlbergueAnimal/Views/Shared/_LoginPartial.cshtml
+++ b/AlbergueAnimal/Views/Shared/_LoginPartial.cshtml
@@ -33,7 +33,7 @@
 
 
             <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Ola @UserManager.GetUserName(User)!</a>
+                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Ol&aacute; @UserManager.GetUserName(User)!</a>
             </li>
 
 
