--- a/AlbergueAnimal/Views/Utilizador/IndexUtilizadores.cshtml
+++ b/AlbergueAnimal/Views/Utilizador/IndexUtilizadores.cshtml
@@ -32,7 +32,8 @@
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
+                @*@Html.DisplayNameFor(model => model.PhoneNumber)*@
+                Contacto Telefónico
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Morada)
@@ -64,7 +65,8 @@
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                   @Html.DisplayFor(modelItem => item.PhoneNumber)
+                    
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Morada)
