--- a/AlbergueAnimal/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/AlbergueAnimal/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -52,7 +52,7 @@
                 {
                     <div class="form-group">
                         <label asp-for="Input.Cargo"></label>
-                        <input asp-for="Input.Cargo" class="form-control" />
+                        <input asp-for="Input.Cargo" class="form-control" disabled />
                     </div>
                 }
                 @*<div class="form-group">
