--- a/AlbergueAnimal/Views/Adocao/Create.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Create.cshtml
@@ -2,15 +2,24 @@
 @using Microsoft.AspNetCore.Identity
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adoção";
 }
+
+<p>
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+        <li class="breadcrumb-item"><a asp-area="" asp-controller="Adocao" asp-action="Index">Lista Adoções</a></li>
+
+        <li class="breadcrumb-item active">@ViewData["Title"]</li>
+    </ol>
+</p>
 
 @inject SignInManager<Utilizador> SignInManager
 @inject UserManager<Utilizador> UserManager
 
-<h2>Create</h2>
+<h2>Pedido de Adoção</h2>
 
-<h4>Adocao</h4>
+<h4>Adoção</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -32,27 +41,27 @@
                     <select asp-for="EstadoAdocaoId" class ="form-control" asp-items="ViewBag.EstadoAdocaoId"></select>
                 </div>*@
             @*<div class="form-group">
-                <label asp-for="CreationDate" class="control-label"></label>
-                <input asp-for="CreationDate" class="form-control" />
-                <span asp-validation-for="CreationDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastUpdated" class="control-label"></label>
-                <input asp-for="LastUpdated" class="form-control" />
-                <span asp-validation-for="LastUpdated" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EndDate" class="control-label"></label>
-                <input asp-for="EndDate" class="form-control" />
-                <span asp-validation-for="EndDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="Arquivado" /> @Html.DisplayNameFor(model => model.Arquivado)
-                    </label>
+                    <label asp-for="CreationDate" class="control-label"></label>
+                    <input asp-for="CreationDate" class="form-control" />
+                    <span asp-validation-for="CreationDate" class="text-danger"></span>
                 </div>
-            </div>*@
+                <div class="form-group">
+                    <label asp-for="LastUpdated" class="control-label"></label>
+                    <input asp-for="LastUpdated" class="form-control" />
+                    <span asp-validation-for="LastUpdated" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="EndDate" class="control-label"></label>
+                    <input asp-for="EndDate" class="form-control" />
+                    <span asp-validation-for="EndDate" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label>
+                            <input asp-for="Arquivado" /> @Html.DisplayNameFor(model => model.Arquivado)
+                        </label>
+                    </div>
+                </div>*@
             <div class="form-group">
                 <input type="submit" value="Concluir" class="btn btn-default" />
             </div>
@@ -61,6 +70,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
