--- a/AlbergueAnimal/Views/Adocao/IndexEmProcessamento.cshtml
+++ b/AlbergueAnimal/Views/Adocao/IndexEmProcessamento.cshtml
@@ -1,13 +1,14 @@
 ﻿@model IEnumerable<AlbergueAnimal.Models.Adocao>
 
 @{
-    ViewData["Title"] = "Adoções Arquivadas";
+    ViewData["Title"] = "IndexEmProcessamento";
 }
-<br />
 
-<h2>@ViewData["Title"]</h2>
-<br />
+<h2>IndexEmProcessamento</h2>
 
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
@@ -19,6 +20,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.EndDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Arquivado)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Animal)
@@ -33,8 +37,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
+@foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.CreationDate)
@@ -46,29 +49,23 @@
                 @Html.DisplayFor(modelItem => item.EndDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Animal.Nome)
+                @Html.DisplayFor(modelItem => item.Arquivado)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Utilizador.Nome)
+                @Html.DisplayFor(modelItem => item.Animal.Cor)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.EstadoAdocao.estado)
+                @Html.DisplayFor(modelItem => item.Utilizador.Id)
             </td>
             <td>
-                @*<a asp-action="Edit" asp-route-id="@item.AnimalId">Editar</a> |*@
-                <a asp-action="Details" asp-route-id="@item.AnimalId">Visualizar</a> |
-                <a asp-action="Delete" asp-route-id="@item.AnimalId">Apagar</a>
-                @*@Html.ActionLink("Adptar", "CreateAnimalAdoption", "Adocao",  item.AnimalId);*@
+                @Html.DisplayFor(modelItem => item.EstadoAdocao.EstadoAdocaoId)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.AdocaoId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.AdocaoId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.AdocaoId">Delete</a>
             </td>
         </tr>
-
-
-        }
+}
     </tbody>
 </table>
-
-
-
-<div>
-    <a asp-action="Index">Voltar à Lista</a>
-</div>
