--- a/AlbergueAnimal/Views/Animals/Index.cshtml
+++ b/AlbergueAnimal/Views/Animals/Index.cshtml
@@ -98,7 +98,7 @@
                 {
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.AnimalId">Editar</a> |
-                        <a asp-action="Details" asp-route-id="@item.AnimalId">Detalhes</a> |
+                        <a asp-action="Details" asp-route-id="@item.AnimalId">Visualizar</a> |
                         <a asp-action="Delete" asp-route-id="@item.AnimalId">Arquivar</a>
                         @*@Html.ActionLink("Adptar", "CreateAnimalAdoption", "Adocao",  item.AnimalId);*@
                     </td>
@@ -106,7 +106,7 @@
                 else
                 {
                     <td>
-                        <a asp-action="Details" asp-route-id="@item.AnimalId">Detalhes</a>
+                        <a asp-action="Details" asp-route-id="@item.AnimalId">Visualizar</a>
                     </td>
                 }
             </tr>
