--- a/AlbergueAnimal/Views/Animals/IndexArquivo.cshtml
+++ b/AlbergueAnimal/Views/Animals/IndexArquivo.cshtml
@@ -5,6 +5,14 @@
 }
 <br />
 
+<p>
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+        <li class="breadcrumb-item"><a asp-area="" asp-controller="Animals" asp-action="Index">Lista Animais</a></li>
+
+        <li class="breadcrumb-item active">@ViewData["Title"]</li>
+    </ol>
+</p>
 <h2>@ViewData["Title"]</h2>
 <br />
 
@@ -41,39 +49,39 @@
         <tbody>
             @foreach (var item in Model)
             {
-            <tr>
-                <td>
-                    @{
-                        if (item.imageContent != null && item.imageMimeType.Contains("image"))
-                        {
-                            string imageBase64 = Convert.ToBase64String(item.imageContent);
-                            string imageSrc = string.Format("data:" + item.imageMimeType + ";base64,{0}", imageBase64);
-                            <img src="@imageSrc" alt="Profile picture of @item.Nome" style=" width: 50px;height: 50px; border-radius: 50%; padding: 0;width: 50px;height: 50px; line-height: 50px;" class="img-responsive img-rounded" />
+                <tr>
+                    <td>
+                        @{
+                            if (item.imageContent != null && item.imageMimeType.Contains("image"))
+                            {
+                                string imageBase64 = Convert.ToBase64String(item.imageContent);
+                                string imageSrc = string.Format("data:" + item.imageMimeType + ";base64,{0}", imageBase64);
+                                <img src="@imageSrc" alt="Profile picture of @item.Nome" style=" width: 50px;height: 50px; border-radius: 50%; padding: 0;width: 50px;height: 50px; line-height: 50px;" class="img-responsive img-rounded" />
+                            }
                         }
-                    }
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Genero)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cor)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataNascimento)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataEntrada)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataVacina)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Raca.Designacao)
-                </td>
-            </tr>
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Genero)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Cor)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DataNascimento)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DataEntrada)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DataVacina)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Raca.Designacao)
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
