--- a/AlbergueAnimal/Views/Utilizador/Index.cshtml
+++ b/AlbergueAnimal/Views/Utilizador/Index.cshtml
@@ -26,7 +26,7 @@
 
 
 <p>
-    <a asp-action="IndexFuncionarios">Lista Funcionários</a>   <a asp-action="IndexUtilizadores">Lista Utilizadores</a>
+          <a asp-action="IndexFuncionarios">Lista Funcionários</a>          |          <a asp-action="IndexUtilizadores">Lista Utilizadores</a>
 </p>
 
 
