--- a/AlbergueAnimal/Views/Home/Index.cshtml
+++ b/AlbergueAnimal/Views/Home/Index.cshtml
@@ -19,23 +19,18 @@
         <div class="item active">
             <img src="~/images/slogan.PNG" alt="ASP.NET" class="img-responsive" />
             <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Visualizar
-                    </a>
-                </p>
+                <!-- <p>
+         Learn how to build ASP.NET apps that can run anywhere.
+         <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
+             Visualizar
+         </a>
+     </p> -->
             </div>
         </div>
         <div class="item">
             <img src="~/images/slgan4.png" alt="Visual Studio" class="img-responsive" />
             <div class="carousel-caption" role="option">
-                <p>
-                    Visite os nossos Animais
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Saber Mais
-                    </a>
-                </p>
+                <p><a asp-area="" asp-controller="Animals" asp-action="Index">Visite os nossos Animais</a></p>
             </div>
         </div>
         <div class="item">
