--- a/AlbergueAnimal/Views/Adocao/IndexAnimalPerUser.cshtml
+++ b/AlbergueAnimal/Views/Adocao/IndexAnimalPerUser.cshtml
@@ -4,7 +4,7 @@
 
 
 @{
-    ViewData["Title"] = "Adoção";
+    ViewData["Title"] = "As Minhas Adoções";
 }
 
 <br />
@@ -16,7 +16,7 @@
     </ol>
 </p>
 
-<h2>Adoção</h2>
+<h2>As Minhas Adoções</h2>
 
 @if (User.IsInRole("Administrator"))
 {
@@ -28,7 +28,7 @@
 }
 else
 {
-    <a asp-action="Create">Adotar Animal</a>
+    <a asp-action="Create">Efectuar Pedido de Adoção</a>
 }
 
 <table class="table">
@@ -121,53 +121,3 @@ else
         <button type="submit" class="btn btn-default">Procurar</button>
     </p>
 }
-
-
-
-@section Scripts{
-
-
-
-    <script src="~/amcharts4/core.js"></script>
-    <script src="~/amcharts4/charts.js"></script>
-    <script src="~/amcharts4/themes/animated.js"></script>
-    <link href="~/amcharts4/examples/javascript/donut-chart/index.css" rel="stylesheet" />
-    <script>
-        am4core.useTheme(am4themes_animated);
-
-        var chart = am4core.create("chartdiv", am4charts.PieChart);
-
-
-        chart.data = [{
-            "country": "Pendente",
-            "value":  @Model.Where(a => a.EstadoAdocao.estado.Equals("Pendente")).Where(z => z.Arquivado == false).ToList().LongCount()
-        }, {
-                "country": "Em Processamento",
-            "value": @Model.Where(a => a.EstadoAdocao.estado.Equals("EmProcessamento")).Where(z => z.Arquivado == false).ToList().LongCount()
-        }];
-
-        chart.innerRadius = am4core.percent(50);
-
-        var series = chart.series.push(new am4charts.PieSeries());
-        series.dataFields.value = "value";
-        series.dataFields.category = "country";
-
-        series.slices.template.cornerRadius = 10;
-        series.slices.template.innerCornerRadius = 7;
-
-        // this creates initial animation
-        series.hiddenState.properties.opacity = 1;
-        series.hiddenState.properties.endAngle = -90;
-        series.hiddenState.properties.startAngle = -90;
-
-        chart.legend = new am4charts.Legend();
-    </script>
-}
-
-@if (User.IsInRole("Administrator") || User.IsInRole("Gestor Adoções"))
-{
-    <!-- HTML -->
-    <div id="chartdiv"></div>
-}
-
-<br />
