--- a/AlbergueAnimal/Views/Shared/_Layout.cshtml
+++ b/AlbergueAnimal/Views/Shared/_Layout.cshtml
@@ -84,17 +84,17 @@
 
 
                         <li>
-                            <a asp-area="" class="dropdown-toggle" data-toggle="dropdown">Gestão Utilizadores </a>
+                            <a asp-area="" class="dropdown-toggle" data-toggle="dropdown">Utilizadores </a>
                             <ul class="dropdown-menu">
 
                                 <li><a id="criarFuncionario" href="/Identity/Account/Register">Registar Funcionário</a></li>
-                                <li><a asp-area="" asp-controller="Utilizador" asp-action="Index">Gestão Utilizadores</a></li>
+                                <li><a asp-area="" asp-controller="Utilizador" asp-action="Index">Gerir Utilizadores</a></li>
                             </ul>
                         </li>
                     }
                     @if (User.IsInRole("Administrator") || User.IsInRole("Gestor Stock"))
                     {
-                        <li><a asp-area="" asp-controller="Stock" asp-action="Index">Gestão Stock</a></li>
+                        <li><a asp-area="" asp-controller="Stock" asp-action="Index">Stock</a></li>
                     }
                     @if (User.IsInRole("Administrator"))
                     {
