--- a/AlbergueAnimal/Views/Adocao/IndexAnimalPerUser.cshtml
+++ b/AlbergueAnimal/Views/Adocao/IndexAnimalPerUser.cshtml
@@ -28,7 +28,7 @@
 }
 else
 {
-    <a asp-action="Create">Efectuar Pedido de Adoção</a>
+    <a asp-action="CreatePerUser">Efectuar Pedido de Adoção</a>
 }
 
 <table class="table">
