--- a/AlbergueAnimal/Views/Shared/_Layout.cshtml
+++ b/AlbergueAnimal/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - AlbergueAnimal</title>
+    <title>@ViewData["Title"] - Albergue Animal</title>
 
     @*<script src="~/amcharts/amcharts.js"></script>
     <script src="~/amcharts/serial.js"></script>
@@ -72,19 +72,19 @@
                             @*<li><a asp-area="" asp-controller="Adocao" asp-action="Index">Adotar</a></li>*@
                             <li><a asp-area="" asp-controller="Adocao" asp-action="IndexAnimalPerUser">Adoções</a></li>
                         }
-                        else
+                        else if (User.IsInRole("Administrator") || User.IsInRole("Gestor Adoções"))
                         {
                             <li><a asp-area="" asp-controller="Adocao" asp-action="Index">Adoções</a></li>
                         }
 
 
-                    }
+
                     @if (User.IsInRole("Administrator") || User.IsInRole("Gestor Recursos Humanos"))
                     {
 
 
                         <li>
-                            <a asp-area="" class="dropdown-toggle" data-toggle="dropdown">Gestão Utilizadores </a>
+                            <a asp-area="" class="dropdown-toggle" data-toggle="dropdown">Utilizadores</a>
                             <ul class="dropdown-menu">
 
                                 <li><a id="criarFuncionario" href="/Identity/Account/Register">Registar Funcionário</a></li>
@@ -94,13 +94,13 @@
                     }
                     @if (User.IsInRole("Administrator") || User.IsInRole("Gestor Stock"))
                     {
-                        <li><a asp-area="" asp-controller="Stock" asp-action="Index">Gestão Stock</a></li>
+                        <li><a asp-area="" asp-controller="Stock" asp-action="Index">Stock</a></li>
                     }
                     @if (User.IsInRole("Administrator"))
                     {
                         <li> <a asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a> </li>
                     }
-
+                    }
                 </ul>
 
                 <partial name="_LoginPartial" />
