--- a/AlbergueAnimal/Views/Utilizador/Details.cshtml
+++ b/AlbergueAnimal/Views/Utilizador/Details.cshtml
@@ -1,39 +1,67 @@
 ﻿@model AlbergueAnimal.Models.Utilizador
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-<h4>Utilizador</h4>
-<hr />
-<dl class="dl-horizontal">
-    <dt>
-        @Html.DisplayNameFor(model => model.Id)
-    </dt>
-    <dd>
-        @Html.DisplayFor(model => model.Id)
-    </dd>
-    <dt>
-        @Html.DisplayNameFor(model => model.Nome)
-    </dt>
-    <dd>
-        @Html.DisplayFor(model => model.Nome)
-    </dd>
-    <dt>
-        @Html.DisplayNameFor(model => model.Genero)
-    </dt>
-    <dd>
-        @Html.DisplayFor(model => model.Genero)
-    </dd>
-    <dt>
-        @Html.DisplayNameFor(model => model.Cargo)
-    </dt>
-    <dd>
-        @Html.DisplayFor(model => model.Cargo)
-    </dd>
-</dl>
+    <h4>Utilizador</h4>
+    <div>
+        @{
+            if (Model.imageContent != null && Model.imageMimeType.Contains("image"))
+            {
+                string imageBase64 = Convert.ToBase64String(Model.imageContent);
+                string imageSrc = string.Format("data:" + Model.imageMimeType + ";base64,{0}", imageBase64);
+                <img src="@imageSrc" alt="Profile picture of @Model.Nome" style="max-height:100px; max-width:120px" class="img-responsive img-rounded" />
+            }
+        }
+    </div>
+    <hr />
+    <dl class="dl-horizontal">
+        @*<dt>
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Id)
+        </dd>*@
+        <dt>
+            @Html.DisplayNameFor(model => model.Nome)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Nome)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Genero)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Genero)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.DBO)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.DBO)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Morada)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Morada)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Cargo)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Cargo)
+        </dd>
+    </dl>
 </div>
 <div>
     <a asp-action="EditarCargo" asp-route-id="@Model.Id">Editar</a> |
